--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,36 @@
-numpy==2.3.5
-PyYAML==6.0.3
-pandas==2.3.3
-openpyxl==3.1.5
-oauthlib==3.3.1
-google-auth==2.41.1
-google-auth-httplib2==0.2.1
-google-auth-oauthlib==1.2.3
-google-api-core==2.28.1
-google-api-python-client==2.187.0
-googleapis-common-protos==1.72.0
+# Core Framework
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+pydantic==2.5.3
+pydantic-settings==2.1.0
+
+# Data Processing
+pandas==2.2.0
+numpy==1.26.3
+
+# Google Drive Integration
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+google-api-python-client==2.115.0
+
+# Configuration
+pyyaml==6.0.1
+python-dotenv==1.0.1
+
+# Database (Optional - for future use)
+sqlalchemy==2.0.25
+alembic==1.13.1
+
+# Authentication (Optional - for future use)
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+
+# CORS
+python-cors==1.0.0
+
+# Development
+pytest==8.0.0
+pytest-asyncio==0.23.3
+httpx==0.26.0
